--- a/localisation/cpt_events_l_english.yml
+++ b/localisation/cpt_events_l_english.yml
@@ -4,18 +4,18 @@ l_english:
  cpt_exit: "Exit"
  cpt_back: "Back/Cancel"
 #    setup events
- cpt_98_title: "£cptsettlericon£ Colony Partition - Setup"
+ cpt_98_title: "£cptcolonist£ Colony Partition - Setup"
  cpt_98_desc: "This Mod allows any §YPlayer§! to seriously game the system or in some cases flat out cheat.\nIf this is a multiplayer game, consider disabling cheats!\n\nBasically, when a colony is annexed, should you get full cores regardless or respect coring time!"
  cpt_98_nocheat: "§Y(Override)§! §ODisable§! §YCheats§!"
  cpt_98_normal: "§Y(Normal)§! §ODisable§! §YCheats§! on §YIronman Saves§!"
  cpt_98_cheat: "§Y(Override)§! CHEATS! CHEATS! .. Cough .. I mean im just testing.."
- cpt_99_title: "£cptsettlericon£ Colony Partition - Is this Multiplayer?"
+ cpt_99_title: "£cptcolonist£ Colony Partition - Is this Multiplayer?"
  cpt_99_desc: "If this save is intended or used for multipleyer, please specify so!\n\nBasically, do you want to have a spam delay? (30 Day global delay)"
  cpt_99_sp: "Singleplayer"
  cpt_99_mp: "Multiplayer (Spam Delay)"
 
 #    main menu
- cpt_1_title: "£cptsettlericon£ Colony Partition - Main Menu"
+ cpt_1_title: "£cptcolonist£ Colony Partition - Main Menu"
  cpt_1_desc: "To Access §YProtection Mechanics§! for specific §YColonies§!, see the §YInfluence§! Actions in the §YDiplomacy Screen§!\nNote for Multiplayer: §YPlayers§! will generally recieve Default §YProtection§!, and will ALWAYS retain §YCores§!!\n\nCurrent Core Setting: [Root.GetColonyCoreSetting]\nPlayer Protection Is: [Root.GetColonyPlayerSetting]\nPrevious Owners Will: [Root.GetColonyClaimsSetting]"
  cpt_start: "Begin §O(May Cause Serious Lag)§!"
  cpt_start_x: "Begin §O(Not Available Right Now)§!"
@@ -25,7 +25,7 @@ l_english:
  cpt_97_desc: "Something happened and your request could not be fulfilled!\nTry again later!\n\nLikely known causes (We might not know!):[Root.GetColonyMP][Root.GetColonyMPDelay]"
 
 #    settings menu
- cpt_2_title: "£cptsettlericon£ Colony Partition - Settings Menu"
+ cpt_2_title: "£cptcolonist£ Colony Partition - Settings Menu"
  cpt_2_desc: "Settings Menu\n\nCurrent Core Setting: [Root.GetColonyCoreSetting]\nPlayer Protection Is: [Root.GetColonyPlayerSetting]\nPrevious Owners Will: [Root.GetColonyClaimsSetting]"
  cpt_open_core_settings: "§MOpen New Owner Cores & Claims Settings§!"
  cpt_open_player_settings: "§MOpen Player Protection Settings§!"
@@ -33,7 +33,7 @@ l_english:
  cpt_reset_protection: "§OReset ALL Colony Protections§!"
 
 #    core settings menu
- cpt_3_title: "£cptsettlericon£ Colonial Partition - New Owner Cores & Claims Settings"
+ cpt_3_title: "£cptcolonist£ Colonial Partition - New Owner Cores & Claims Settings"
  cpt_3_desc: "When transacting §YCores§!, how should they be processed?\n\nThere are 3 options:\n 1 = We Translate §YCores§!\n     §YFull Cores§!, §YTerritorial Cores§! & §YNo Cores§!, will be perfectly transferred to us.\n 2 = We Skip §YUncored Colonies§! §M(Default)§!\n     Any Colonies with missing §YCores§!, will be skipped\n     §YFull Cores§! & §YTerritorial Cores§!, will be perfectly transferred to us.\n 3 = We §YFull Core Everything§! §M(Cheats)§!\n     We §GGain§! §YFull Cores§! on all provinces ceded to us!\n\nCurrent Core Setting: [Root.GetColonyCoreSetting]"
  cpt_3_1: "Translate §YCores§!"
  cpt_3_1_s: "Translate §YCores§! §M(Selected)§!"
@@ -44,13 +44,13 @@ l_english:
  cpt_3_3_s: "§M(Cheats)§! §YFull Core§! ALL Provinces Ceded! §M(Selected)§!"
 
 #    player protection settings menu
- cpt_4_title: "£cptsettlericon£ Colonial Partition - Player Protection Settings"
+ cpt_4_title: "£cptcolonist£ Colonial Partition - Player Protection Settings"
  cpt_4_desc: "Any colonies that were EVER a §YPlayer§!, can get §YProtection§! from partitioning. By default §YProtection§! is §GEnabled§!.\nProvinces CANNOT be taken away from Active Players!\n\nPlayer Protection Is: [Root.GetColonyPlayerSetting]"
  cpt_4_x: "§O(DISABLE)§! §YUnprotect§! §YPlayer§! Colonies"
  cpt_4_e: "§G(ENABLE)§! §YProtect§! §YPlayer§! Colonies"
 
 #    previous owner claims settings menu
- cpt_5_title: "£cptsettlericon£ Colonial Partition - Previous Owner Cores & Claims Settings"
+ cpt_5_title: "£cptcolonist£ Colonial Partition - Previous Owner Cores & Claims Settings"
  cpt_5_desc: "When transacting §YCores§!, should the Previous Owner maintain their claims?\n\nThere are 4 options:\n 1 = They §RLose§! All §YCores§!\n 2 = They §GGain§! Claims §M(Default)§!\n 3 = They §GKeep§! All §YCores§! & §GGain§! §YClaims§!\n     Note: They will also §GKeep§! all §YTerritorial Cores§!\n 4 = They §GGain§! §YFull Cores§! & §YClaims§!\n\nNote: All Colonies that were EVER a Player will §GKeep§! All §YCores§! & §GGain§! §YPermanent Claims!§!\n\nCurrently, Previous Owners will: [Root.GetColonyClaimsSetting]"
  cpt_5_1: "§RLose§! All §YCores§!"
  cpt_5_1_s: "§RLose§! All §YCores§! §M(Selected)§!"
@@ -63,11 +63,11 @@ l_english:
  cpt_5_4_s: "§M(Cheats)§! §YFull Core§! ALL Provinces Ceded! §M(Selected)§!"
 
 # protect colony event alternative
- cpt_50_title: "£cptsettlericon£ Set Colony Protection"
+ cpt_50_title: "£cptcolonist£ Set Colony Protection"
  cpt_50_desc: "§Y[cpt_set_protection_from.GetName]§! will §GGain§! §YProtected§! status, colony partitions will never strip them of their lands!\nCan be revoked at any time."
  cpt_50_protect: "Set As §YProtected§!"
 
 # Recursive Events. Always hidden
- cpt_r_t: "£cptsettlericon£ Recursive Event"
+ cpt_r_t: "£cptcolonist£ Recursive Event"
  cpt_r_d: ""
  cpt_r_a: ""
