--- a/localisation/cpt_decisions_l_english.yml
+++ b/localisation/cpt_decisions_l_english.yml
@@ -1,5 +1,5 @@
 ﻿# Written by mat1432 https://steamcommunity.com/id/mat1432/ (Steam) https://github.com/mat1432/Colonial_Partitioning (GitHub)
 l_english:
 # decisions
- colonial_partition_title: "£cptcolonist£ Open Colonial Partitioning Menu"
+ colonial_partition_title: "£cptcolonist£ Colonial Partitioning Menu"
  colonial_partition_desc: "You can use this mod to fix any colonies expanding into another colonies' charter.\nIt can also be used to conquer the new world and have your other colonies core it for you!"
