--- a/localisation/cpt_customizable_localization_l_english.yml
+++ b/localisation/cpt_customizable_localization_l_english.yml
@@ -23,6 +23,6 @@ l_english:
 
 # custom localisation
 # may break everything else so its here at the bottom
- cpt_no_cheat_2: "(£no£ £ironman£)"
+ cpt_no_cheat_2: "(£no£ £cptironman£)"
  cpt_no_cheat_1: "(£no£ :\\>)"
  cpt_no_cheat_3: "(£yes£ :\\>)"
